--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,16 @@
 name: universal_ble
 description: A cross-platform (Android/iOS/MacOS/Windows/Linux/Web) Bluetooth Low Energy (BLE) plugin for Flutter
-version: 0.8.0
+version: 0.8.1
 homepage: https://navideck.com
 repository: https://github.com/Navideck/universal_ble
 issue_tracker: https://github.com/Navideck/universal_ble/issues
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
 
 environment:
   sdk: ">=3.1.3 <4.0.0"
