--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,32 @@
 {
   "cSpell.words": [
+    "BTLE",
+    "bytevc",
     "connnection",
     "DSIMPLEBLE",
+    "hresult",
+    "hstring",
+    "HWND",
     "Inspectable",
+    "LPARAM",
+    "LRESULT",
     "microtask",
     "modalias",
+    "navideck",
     "NSUUID",
+    "NTDDI",
     "pairable",
+    "Recieved",
     "rssi",
     "simpleble",
     "unawaited",
+    "UNIVERSALBLE",
     "Unpair",
+    "Unpairing",
     "unwatch",
-    "uuidstr"
+    "uuidstr",
+    "winrt",
+    "WPARAM"
   ],
   "cmake.configureOnOpen": false,
   "files.associations": {
