Improve windows device name discovery (#4)
* Improve windows device name discovery

* Imrove classes and folders structuring

* rename generated files

* Improve windows threads and other fixes

* More optimizations

* Cleanups

* Update .vscode/settings.json

Co-authored-by: Foti Dim <foti@navideck.com>

* Resolve comments

* Performance improvements

---------

Co-authored-by: Foti Dim <foti@navideck.com>
Co-authored-by: Foti Dim <fdimanidis@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,31 @@
 {
   "cSpell.words": [
+    "BTLE",
+    "bytevc",
     "connnection",
     "DSIMPLEBLE",
+    "hresult",
+    "hstring",
+    "HWND",
     "Inspectable",
+    "LPARAM",
+    "LRESULT",
     "microtask",
     "modalias",
+    "navideck",
     "NSUUID",
+    "NTDDI",
     "pairable",
     "rssi",
     "simpleble",
     "unawaited",
+    "UNIVERSALBLE",
     "Unpair",
+    "Unpairing",
     "unwatch",
-    "uuidstr"
+    "uuidstr",
+    "winrt",
+    "WPARAM"
   ],
   "cmake.configureOnOpen": false,
   "files.associations": {
