--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -6,7 +6,7 @@ include(FetchContent)
 set(CPPWINRT_VERSION "2.0.220418.1")
 set(PLUGIN_NAME "universal_ble_plugin")
 
-################ NuGet intall begin ################
+# ############### NuGet intall begin ################
 FetchContent_Declare(nuget
   URL "https://dist.nuget.org/win-x86-commandline/v6.0.0/nuget.exe"
   URL_HASH SHA256=04eb6c4fe4213907e2773e1be1bbbd730e9a655a3c9c58387ce8d4a714a5b9e1
@@ -14,31 +14,33 @@ FetchContent_Declare(nuget
 )
 
 find_program(NUGET nuget)
-if (NOT NUGET)
-    message("Nuget.exe not found, trying to download or use cached version.")
-    FetchContent_MakeAvailable(nuget)
-    set(NUGET ${nuget_SOURCE_DIR}/nuget.exe)
+
+if(NOT NUGET)
+  message("Nuget.exe not found, trying to download or use cached version.")
+  FetchContent_MakeAvailable(nuget)
+  set(NUGET ${nuget_SOURCE_DIR}/nuget.exe)
 endif()
 
 execute_process(COMMAND
-    ${NUGET} install "Microsoft.Windows.CppWinRT" -Version ${CPPWINRT_VERSION} -OutputDirectory packages
-    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-    RESULT_VARIABLE ret)
-if (NOT ret EQUAL 0)
-    message(FATAL_ERROR "Failed to install nuget package Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}")
+  ${NUGET} install "Microsoft.Windows.CppWinRT" -Version ${CPPWINRT_VERSION} -OutputDirectory packages
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+  RESULT_VARIABLE ret)
+
+if(NOT ret EQUAL 0)
+  message(FATAL_ERROR "Failed to install nuget package Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}")
 endif()
 
-################ NuGet install end ################
-
-
+# ############### NuGet install end ################
 list(APPEND PLUGIN_SOURCES
-  "universal_ble_plugin.cpp"
-  "universal_ble_plugin.h"
-  "universal_enum.h"
-  "Utils.cpp"
-  "Utils.h"
-  "UniversalBle.g.cpp"
-  "UniversalBle.g.h"
+  "src/universal_ble_plugin.cpp"
+  "src/universal_ble_plugin.h"
+  "src/helper/universal_enum.h"
+  "src/helper/universal_ble_base.h"
+  "src/helper/utils.cpp"
+  "src/helper/utils.h"
+  "src/ui_thread_handler.hpp"
+  "src/generated/universal_ble.g.cpp"
+  "src/generated/universal_ble.g.h"
 )
 
 add_library(${PLUGIN_NAME} SHARED
@@ -47,11 +49,9 @@ add_library(${PLUGIN_NAME} SHARED
   ${PLUGIN_SOURCES}
 )
 
-
 apply_standard_settings(${PLUGIN_NAME})
 
-
-################ NuGet import begin ################
+# ############### NuGet import begin ################
 set_target_properties(${PLUGIN_NAME} PROPERTIES VS_PROJECT_IMPORT
   ${CMAKE_BINARY_DIR}/packages/Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}/build/native/Microsoft.Windows.CppWinRT.props
 )
@@ -59,8 +59,8 @@ set_target_properties(${PLUGIN_NAME} PROPERTIES VS_PROJECT_IMPORT
 target_link_libraries(${PLUGIN_NAME} PRIVATE
   ${CMAKE_BINARY_DIR}/packages/Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}/build/native/Microsoft.Windows.CppWinRT.targets
 )
-################ NuGet import end ################
 
+# ############### NuGet import end ################
 set_target_properties(${PLUGIN_NAME} PROPERTIES
   CXX_VISIBILITY_PRESET hidden)
 target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
@@ -68,7 +68,6 @@ target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
 target_include_directories(${PLUGIN_NAME} INTERFACE
   "${CMAKE_CURRENT_SOURCE_DIR}/include")
 target_link_libraries(${PLUGIN_NAME} PRIVATE flutter flutter_wrapper_plugin)
-
 
 set(universal_ble_bundled_libraries
   ""
