--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 0.9.0
 homepage: https://navideck.com
 repository: https://github.com/Navideck/universal_ble
 issue_tracker: https://github.com/Navideck/universal_ble/issues
-funding: https://github.com/sponsors/Navideck
+funding:
+  - https://github.com/sponsors/Navideck
 
 platforms:
   android:
