--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,8 @@
     "unwatch",
     "uuidstr",
     "winrt",
-    "WPARAM"
+    "WPARAM",
+    "ZUUID"
   ],
   "cmake.configureOnOpen": false,
   "files.associations": {
