fix manufacturer data for little endian

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "BTLE",
     "bytevc",
     "connnection",
+    "Cupertino",
     "DSIMPLEBLE",
     "hresult",
     "hstring",
@@ -13,12 +14,14 @@
     "LRESULT",
     "microtask",
     "modalias",
+    "msix",
     "navideck",
     "NSUUID",
     "NTDDI",
     "pairable",
     "rssi",
     "simpleble",
+    "sublist",
     "unawaited",
     "UNIVERSALBLE",
     "Unpair",
