--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  msix: ^3.16.7
 
 flutter:
   uses-material-design: true
