--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   permission_handler: ^10.4.3
   device_info_plus: ^9.0.2
   flutter_adaptive_scaffold: ^0.1.7+2
+  convert: ^3.1.1
   universal_ble:
     path: ../
 
