Implement native windows dialog for asking pin pairing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,12 +5,18 @@
     "bytevc",
     "connnection",
     "Cupertino",
+    "DFACE",
     "DSIMPLEBLE",
+    "HINSTANCE",
+    "HMENU",
     "hresult",
     "hstring",
     "HWND",
     "Inspectable",
+    "LOWORD",
     "LPARAM",
+    "lpfn",
+    "lpsz",
     "LRESULT",
     "microtask",
     "modalias",
@@ -18,6 +24,7 @@
     "navideck",
     "NSUUID",
     "NTDDI",
+    "OVERLAPPEDWINDOW",
     "pairable",
     "rssi",
     "simpleble",
@@ -30,6 +37,7 @@
     "unwatch",
     "uuidstr",
     "winrt",
+    "WNDCLASS",
     "WPARAM",
     "ZUUID"
   ],
