Improve pairing dialog ui

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "bluez",
     "BTLE",
+    "BTNHIGHLIGHT",
     "bytevc",
     "connnection",
     "Cupertino",
@@ -18,7 +19,9 @@
     "lpfn",
     "lpsz",
     "LRESULT",
+    "MAXIMIZEBOX",
     "microtask",
+    "MINIMIZEBOX",
     "modalias",
     "msix",
     "navideck",
@@ -27,6 +30,7 @@
     "OVERLAPPEDWINDOW",
     "pairable",
     "rssi",
+    "SETTEXT",
     "simpleble",
     "subdata",
     "sublist",
