Use PairAsync for Windows 11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "LOWORD",
     "LPARAM",
     "lpfn",
+    "LPOSVERSIONINFO",
     "lpsz",
     "LRESULT",
     "MAXIMIZEBOX",
@@ -27,8 +28,14 @@
     "navideck",
     "NSUUID",
     "NTDDI",
+    "ntdll",
+    "NTSTATUS",
+    "OSVERSIONINFOW",
+    "osvi",
     "OVERLAPPEDWINDOW",
     "pairable",
+    "PNTSTATUS",
+    "PRTL",
     "rssi",
     "SETTEXT",
     "simpleble",
