--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "Cupertino",
     "DFACE",
     "DSIMPLEBLE",
+    "HFONT",
     "HINSTANCE",
     "HMENU",
     "hresult",
@@ -37,6 +38,7 @@
     "PNTSTATUS",
     "PRTL",
     "rssi",
+    "SETFONT",
     "SETTEXT",
     "simpleble",
     "subdata",
