Make window topmost

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "modalias",
     "msix",
     "navideck",
+    "NOSIZE",
     "NSUUID",
     "NTDDI",
     "ntdll",
@@ -43,6 +44,7 @@
     "simpleble",
     "subdata",
     "sublist",
+    "THICKFRAME",
     "unawaited",
     "UNIVERSALBLE",
     "Unpair",
