Implement pairing with dialog on windows (#46)
* Implement pairing with dialog on windows

* Minor fix

* Add pin pairing request for windows 10

* Implement native windows dialog for asking pin pairing

* Cleanups

* Improve pairing dialog ui

* Use PairAsync for Windows 11

* Fix OK button text

* Improve pin entry layout

Co-authored-by: Rohit Sangwan <rohitsangwan647@gmail.com>

* Dialog adjustments

* Make dialog non resizable

* Make window topmost

* Final adjustments

* Update changelog

* Release dialog resources properly

* Release dialog resources properly

* Remove duplicate import

* Minor Fix

---------

Co-authored-by: fotidim <foti@navideck.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,27 +2,50 @@
   "cSpell.words": [
     "bluez",
     "BTLE",
+    "BTNHIGHLIGHT",
     "bytevc",
     "connnection",
     "Cupertino",
+    "DFACE",
     "DSIMPLEBLE",
+    "HFONT",
+    "HINSTANCE",
+    "HMENU",
     "hresult",
     "hstring",
     "HWND",
     "Inspectable",
+    "LOWORD",
     "LPARAM",
+    "lpfn",
+    "LPOSVERSIONINFO",
+    "lpsz",
     "LRESULT",
+    "MAXIMIZEBOX",
     "microtask",
+    "MINIMIZEBOX",
     "modalias",
     "msix",
     "navideck",
+    "NOMOVE",
+    "NOSIZE",
     "NSUUID",
     "NTDDI",
+    "ntdll",
+    "NTSTATUS",
+    "OSVERSIONINFOW",
+    "osvi",
+    "OVERLAPPEDWINDOW",
     "pairable",
+    "PNTSTATUS",
+    "PRTL",
     "rssi",
+    "SETFONT",
+    "SETTEXT",
     "simpleble",
     "subdata",
     "sublist",
+    "THICKFRAME",
     "unawaited",
     "UNIVERSALBLE",
     "Unpair",
@@ -30,6 +53,7 @@
     "unwatch",
     "uuidstr",
     "winrt",
+    "WNDCLASS",
     "WPARAM",
     "ZUUID"
   ],
