--- a/example/macos/Runner/Info.plist
+++ b/example/macos/Runner/Info.plist
@@ -29,8 +29,8 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>example</string>
+	<string>Discover Bluetooth devices</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
-	<string>example</string>
+	<string>Discover Bluetooth devices</string>
 </dict>
 </plist>
