--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,13 @@
             "type": "dart"
         },
         {
+            "name": "example release",
+            "cwd": "example",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release"
+        },
+        {
             "name": "example_mock",
             "cwd": "example",
             "request": "launch",
