--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="com.navideck.universal_ble">
-   <uses-permission
-       android:name="android.permission.BLUETOOTH"
-       android:maxSdkVersion="30" />
-   <uses-permission
-       android:name="android.permission.BLUETOOTH_ADMIN"
-       android:maxSdkVersion="30" />   
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" package="com.navideck.universal_ble">   
+    <uses-permission android:name="android.permission.BLUETOOTH"  />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"  />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation"  />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"  />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE"  />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"  />
 </manifest>
