--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -44,6 +44,7 @@ list(APPEND PLUGIN_SOURCES
   "src/pin_entry.h"
   "src/universal_ble_filter_util.cpp"
   "src/universal_ble_filter_util.h"
+  "src/universal_ble_thread_safe.h"
 )
 
 add_library(${PLUGIN_NAME} SHARED
