--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,22 @@
 name: universal_ble
 description: A cross-platform (Android/iOS/macOS/Windows/Linux/Web) Bluetooth Low Energy (BLE) plugin for Flutter
-version: 0.18.0
+version: 0.19.0
 homepage: https://navideck.com
 repository: https://github.com/Navideck/universal_ble
 issue_tracker: https://github.com/Navideck/universal_ble/issues
+documentation:  https://github.com/Navideck/universal_ble#readme
 funding:
   - https://github.com/sponsors/Navideck
+
+topics:
+  - Bluetooth Low Energy
+  - BLE
+  - Core Bluetooth
+  - Android Bluetooth API
+  - Windows.Devices.Bluetooth
+  - BlueZ
+  - Web Bluetooth API
+  - Cross-platform
 
 platforms:
   android:
