--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@ on:
     tags:
     # must align with the tag-pattern configured on pub.dev, often just replace
     #  with [0-9]+.[0-9]+.[0-9]+*
-    - 'v[0-9]+.[0-9]+.[0-9]+*' # tag-pattern on pub.dev: 'v'
+    - '[0-9]+.[0-9]+.[0-9]+*' # tag-pattern on pub.dev: ''
     # If you prefer tags like '1.2.3', without the 'v' prefix, then use:
     # - '[0-9]+.[0-9]+.[0-9]+*' # tag-pattern on pub.dev: ''
     # If your repository contains multiple packages consider a pattern like:
