Implement unified and type safe error messages

--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
         applicationId "com.navideck.universal_ble_example"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion 21
+        minSdkVersion flutter.minSdkVersion
         targetSdkVersion 35
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
