--- a/.github/workflows/build_web_app.yml
+++ b/.github/workflows/build_web_app.yml
@@ -1,9 +1,8 @@
-
 name: Build web app
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
@@ -14,7 +13,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: "stable"
       - run: flutter --version
 
       - name: Cache pub dependencies
@@ -28,7 +27,7 @@ jobs:
         run: flutter pub get
 
       - name: Build Web App
-        run: cd example && flutter build web --base-href=/universal_ble/
+        run: cd example && flutter build web --base-href=/${{ github.event.repository.name }}/
 
       - name: Deploy to GitHub Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4
