--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   convert: ^3.1.1
   expandable: ^5.0.1
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.5.3
   universal_ble:
     path: ../
 
