--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -46,6 +46,8 @@ list(APPEND PLUGIN_SOURCES
   "src/universal_ble_filter_util.h"
   "src/universal_ble_thread_safe.h"
   "src/enum_parser.h"
+  "src/helper/universal_ble_logger.cpp"
+  "src/helper/universal_ble_logger.h"
 )
 
 add_library(${PLUGIN_NAME} SHARED
