--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = universal_ble_example
+PRODUCT_NAME = Universal BLE
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.navideck.universalBleExample
+PRODUCT_BUNDLE_IDENTIFIER = com.navideck.universalble
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.navideck. All rights reserved.
