--- a/example/web/manifest.json
+++ b/example/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "Example app for Web",
+    "description": "Universal BLE",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
