--- a/example/windows/CMakeLists.txt
+++ b/example/windows/CMakeLists.txt
@@ -4,7 +4,7 @@ project(universal_ble_example LANGUAGES CXX)
 
 # The name of the executable created for the application. Change this to change
 # the on-disk name of your application.
-set(BINARY_NAME "universal_ble_example")
+set(BINARY_NAME "universal_ble")
 
 # Explicitly opt in to modern CMake behaviors to avoid warnings with recent
 # versions of CMake.
