--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   convert: ^3.1.1
   expandable: ^5.0.1
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.5.4
+  package_info_plus: ^9.0.0
+  url_launcher: ^6.3.2
   universal_ble:
     path: ../
 
@@ -21,6 +24,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  package_rename: ^1.10.1
+  flutter_launcher_icons:
+    git:
+      url: https://github.com/Navideck/flutter_launcher_icons.git
+      ref: improve-windows-ico-generation
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon.png
