--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "LPOSVERSIONINFO",
     "lpsz",
     "LRESULT",
+    "LTWH",
     "MAXIMIZEBOX",
     "microtask",
     "MINIMIZEBOX",
@@ -52,6 +53,7 @@
     "Unpair",
     "Unpairing",
     "unwatch",
+    "USERPROFILE",
     "uuidstr",
     "winrt",
     "WNDCLASS",
