--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,8 +15,11 @@ dependencies:
   shared_preferences: ^2.5.4
   package_info_plus: ^9.0.0
   url_launcher: ^6.3.2
+  path_provider: ^2.1.1
   universal_ble:
     path: ../
+  device_preview: ^1.3.1
+  device_preview_screenshot: ^1.0.0
 
 dev_dependencies:
   integration_test:
