--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -21,21 +21,13 @@ if(NOT NUGET)
   set(NUGET ${nuget_SOURCE_DIR}/nuget.exe)
 endif()
 
-# Use CMAKE_CURRENT_BINARY_DIR for plugin's build directory (absolute path)
-get_filename_component(PLUGIN_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR} ABSOLUTE)
-set(NUGET_PACKAGES_DIR "${PLUGIN_BUILD_DIR}/packages")
-set(CPPWINRT_PACKAGE_DIR "${NUGET_PACKAGES_DIR}/Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}")
+execute_process(COMMAND
+  ${NUGET} install "Microsoft.Windows.CppWinRT" -Version ${CPPWINRT_VERSION} -OutputDirectory packages
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+  RESULT_VARIABLE ret)
 
-# Only install if package doesn't exist
-if(NOT EXISTS "${CPPWINRT_PACKAGE_DIR}")
-  execute_process(COMMAND
-    ${NUGET} install "Microsoft.Windows.CppWinRT" -Version ${CPPWINRT_VERSION} -OutputDirectory packages
-    WORKING_DIRECTORY ${PLUGIN_BUILD_DIR}
-    RESULT_VARIABLE ret)
-
-  if(NOT ret EQUAL 0)
-    message(FATAL_ERROR "Failed to install nuget package Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}")
-  endif()
+if(NOT ret EQUAL 0)
+  message(FATAL_ERROR "Failed to install nuget package Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}")
 endif()
 
 # ############### NuGet install end ################
@@ -77,16 +69,8 @@ add_library(${PLUGIN_NAME} SHARED
 apply_standard_settings(${PLUGIN_NAME})
 
 # ############### NuGet import begin ################
-set(CPPWINRT_PROPS "${CPPWINRT_PACKAGE_DIR}/build/native/Microsoft.Windows.CppWinRT.props")
-
-if(NOT EXISTS "${CPPWINRT_PROPS}")
-  message(FATAL_ERROR "CppWinRT props file not found: ${CPPWINRT_PROPS}")
-endif()
-
-# Import CppWinRT props file - MSBuild will automatically handle the targets file
-# The props file imports the targets file internally, so we don't need to link it
 set_target_properties(${PLUGIN_NAME} PROPERTIES VS_PROJECT_IMPORT
-  "${CPPWINRT_PROPS}"
+  ${CMAKE_BINARY_DIR}/packages/Microsoft.Windows.CppWinRT.${CPPWINRT_VERSION}/build/native/Microsoft.Windows.CppWinRT.props
 )
 
 # ############### NuGet import end ################
