--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -70,6 +70,7 @@ target_link_libraries(${PLUGIN_NAME} PRIVATE
 # ############### NuGet import end ################
 set_target_properties(${PLUGIN_NAME} PROPERTIES
   CXX_VISIBILITY_PRESET hidden)
+target_compile_features(${PLUGIN_NAME} PRIVATE cxx_std_20)
 target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
 
 target_include_directories(${PLUGIN_NAME} INTERFACE
