--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   package_info_plus: ^9.0.0
   url_launcher: ^6.3.2
   path_provider: ^2.1.1
+  yaml: ^3.1.3
   universal_ble:
     path: ../
   device_preview: ^1.3.1
@@ -37,3 +38,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon.png
+    - assets/company_identifiers.yaml
