--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
     path: ../
   device_preview: ^1.3.1
   device_preview_screenshot: ^1.0.0
+  flutter_foreground_task: ^9.2.0
 
 dev_dependencies:
   integration_test:
